--- a/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
+++ b/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
@@ -289,6 +289,24 @@
         }
       },
       "source": [
+        "* 以下では必要のない場合は `%%bash_submit` ではなく `%%bash` を用いた実行セルを示すが, 必要に応じて自分で `%%bash_submit` に変えて実行せよ\n",
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-013",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
         "\n",
         "* 文法\n",
         "```\n",
@@ -318,7 +336,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-013",
+          "grade_id": "c-014",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -349,7 +367,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-014",
+          "grade_id": "c-015",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -369,7 +387,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-015",
+          "grade_id": "c-016",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -389,7 +407,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-016",
+          "grade_id": "c-017",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -414,7 +432,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-017",
+          "grade_id": "c-018",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -434,7 +452,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-018",
+          "grade_id": "c-019",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -451,7 +469,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-019",
+          "grade_id": "c-020",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -471,7 +489,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-020",
+          "grade_id": "c-021",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -509,7 +527,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-021",
+          "grade_id": "c-022",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -542,7 +560,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-022",
+          "grade_id": "c-023",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -562,7 +580,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-023",
+          "grade_id": "c-024",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -582,7 +600,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-024",
+          "grade_id": "c-025",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -602,7 +620,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-025",
+          "grade_id": "c-026",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -628,7 +646,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-026",
+          "grade_id": "c-027",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -648,7 +666,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-027",
+          "grade_id": "c-028",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -665,7 +683,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-028",
+          "grade_id": "c-029",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -685,7 +703,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-029",
+          "grade_id": "c-030",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -716,7 +734,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-030",
+          "grade_id": "c-031",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -755,7 +773,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-031",
+          "grade_id": "c-032",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -775,7 +793,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-032",
+          "grade_id": "c-033",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -795,7 +813,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-033",
+          "grade_id": "c-034",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -860,7 +878,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-034",
+          "grade_id": "c-035",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -901,7 +919,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-035",
+          "grade_id": "c-036",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -921,7 +939,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-036",
+          "grade_id": "c-037",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -941,7 +959,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-037",
+          "grade_id": "c-038",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -958,7 +976,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-038",
+          "grade_id": "c-039",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -978,7 +996,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-039",
+          "grade_id": "c-040",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1003,7 +1021,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-040",
+          "grade_id": "c-041",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1044,7 +1062,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-041",
+          "grade_id": "c-042",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1064,7 +1082,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-042",
+          "grade_id": "c-043",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1084,7 +1102,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-043",
+          "grade_id": "c-044",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1116,7 +1134,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-044",
+          "grade_id": "c-045",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1183,7 +1201,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-045",
+          "grade_id": "c-046",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1203,7 +1221,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-046",
+          "grade_id": "c-047",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1221,7 +1239,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-047",
+          "grade_id": "c-048",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1241,7 +1259,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-048",
+          "grade_id": "c-049",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1258,7 +1276,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-049",
+          "grade_id": "c-050",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1281,7 +1299,57 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-050",
+          "grade_id": "c-051",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "* Wisteria Aquarius の計算ノードは 72 コアで, 8 GPUを搭載しており, 1 GPUにつき 72 / 8 = 9 コアが割り当てられる\n",
+        "* 36 コアまで性能向上させたければ\n",
+        "```\n",
+        "#PJM -L gpu=1\n",
+        "#PJM --omp thread=9\n",
+        "```\n",
+        "を指定する必要がある"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-052",
+          "locked": false,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "%%bash_submit\n",
+        "#PJM -L gpu=1\n",
+        "#PJM --omp thread=9\n",
+        "#PJM -L elapse=0:05:00\n",
+        "\n",
+        "for x in 1 2 3 4 6 8 9 12 18 21 24 27 30 33 36; do\n",
+        "    echo -n \"$x \"\n",
+        "    OMP_NUM_THREADS=${x} OMP_PROC_BIND=true ./omp_speedup_mp.exe 72 $((100 * 1000 * 1000)) | grep GFLOPS\n",
+        "done"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-053",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1298,7 +1366,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-051",
+          "grade_id": "c-054",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1353,7 +1421,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-052",
+          "grade_id": "c-055",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1403,7 +1471,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-053",
+          "grade_id": "c-056",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1443,7 +1511,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-054",
+          "grade_id": "c-057",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1463,7 +1531,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-055",
+          "grade_id": "c-058",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1483,7 +1551,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-056",
+          "grade_id": "c-059",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1502,7 +1570,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-057",
+          "grade_id": "c-060",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1543,7 +1611,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-058",
+          "grade_id": "c-061",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1563,7 +1631,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-059",
+          "grade_id": "c-062",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1582,7 +1650,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-060",
+          "grade_id": "c-063",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1602,7 +1670,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-061",
+          "grade_id": "c-064",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1621,7 +1689,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-062",
+          "grade_id": "c-065",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1641,7 +1709,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-063",
+          "grade_id": "c-066",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1681,7 +1749,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-064",
+          "grade_id": "c-067",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1722,7 +1790,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-065",
+          "grade_id": "c-068",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1742,7 +1810,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-066",
+          "grade_id": "c-069",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1762,7 +1830,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-067",
+          "grade_id": "c-070",
           "locked": true,
           "schema_version": 3,
           "solution": false,
