--- a/01jupyter/notebooks/source/cs02/cs02_omp_gpu.py.ipynb
+++ b/01jupyter/notebooks/source/cs02/cs02_omp_gpu.py.ipynb
@@ -2769,11 +2769,11 @@
         "  for (long i = 0; i < m; i++) {\n",
         "    v[i] = 1.0;\n",
         "  }\n",
-        "  long t0 = omp_get_wtime();\n",
+        "  double t0 = omp_get_wtime();\n",
         "  // get sum of the array (you make it happen on GPU)\n",
         "  double s = sum(v, m);\n",
-        "  long t1 = omp_get_wtime();\n",
-        "  printf(\"pid = %d, answer = %f, took %ld ns\\n\",\n",
+        "  double t1 = omp_get_wtime();\n",
+        "  printf(\"pid = %d, answer = %f, took %f sec\\n\",\n",
         "         getpid(), s, t1 - t0);\n",
         "  return 0;\n",
         "}"
