--- a/01jupyter/notebooks/source/cs03/cs03_omp_integral.py.ipynb
+++ b/01jupyter/notebooks/source/cs03/cs03_omp_integral.py.ipynb
@@ -398,11 +398,7 @@
         }
       },
       "source": [
-        "* 以下の`OMP_NUM_THREADS=1` を色々変えて実行してみよ\n",
-        "* なお,\n",
-        "  * https://tauleg.zapto.org:8000/ には18の(仮想)コア\n",
-        "  * https://taulec.zapto.org:8000/ には152の(仮想)コア\n",
-        "があるので, できれば後者で, 多数のスレッド数でやってみよ  "
+        "* 以下の`OMP_NUM_THREADS=1` を色々変えて実行してみよ"
       ]
     },
     {
