--- a/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
+++ b/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
@@ -57,9 +57,11 @@
         "# 1. このnotebookの使い方 / How this notebook works",
         "\n",
         "* スーパーコンピュータ(Wisteria)で, SSH + コマンドの代わりに, プログラミングを学習する環境\n",
-        "* 本演習では Wisteria Aquarius (Intel CPU + NVIDIA GPU) を用いる\n",
+        "* 本演習では\n",
+        "  * Wisteria Aquarius (Intel CPU + NVIDIA GPU) を用いる\n",
+        "  * マルチコア並列 (OpenMP) の演習では Wisteria Odyssey を用いることもできる\n",
         "* Jupyterのセルを実行するだけで例題プログラムを保存, コンパイル, 実行できる\n",
-        "* GPUを用いず, 一瞬で終了するコマンドであればログインノードで直接実行\n",
+        "* GPU (NVIDIA GPUが必要), Odyssey (CPUがログインノードと異なる) を用いず, かつすぐに終了する (ログインノードにほとんど負荷をかけない) コマンドであればログインノード (Intel CPU) で直接実行\n",
         "* それ以外の場合はセルをほんの少し修正するとそれをバッチキューに入れて実行できる\n",
         "\n",
         "* 入口: https://wisteria08.cc.u-tokyo.ac.jp:8000/jupyterhub/ \n",
@@ -617,10 +619,9 @@
       "source": [
         "%%bash_submit\n",
         "#PJM -L rscgrp=lecture-a\n",
+        "#PJM -L elapse=0:01:00\n",
         "#PJM -L gpu=1\n",
         "#PJM --omp thread=9\n",
-        "#PJM --mpi proc=1\n",
-        "#PJM -L elapse=0:01:00\n",
         "#PJM -g gt47\n",
         "#PJM -j\n",
         "#PJM -o 0output.txt\n",
@@ -762,6 +763,56 @@
         "hostname\n",
         "pwd\n",
         "who\n",
+        "uptime"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-035",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "\n",
+        "* 以下はOdyssey用の推奨値\n",
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-036",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "%%bash_submit\n",
+        "#PJM -L rscgrp=lecture-o\n",
+        "#PJM -L elapse=0:01:00\n",
+        "#PJM -L node=1\n",
+        "#PJM --omp thread=48\n",
+        "#PJM -g gt47\n",
+        "#PJM -j\n",
+        "#PJM -o 0output.txt\n",
+        "\n",
+        "hostname\n",
+        "pwd\n",
+        "whoami\n",
         "uptime"
       ],
       "execution_count": null,
