--- a/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
+++ b/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
@@ -72,9 +72,12 @@
       "source": [
         "import os\n",
         "paths = os.environ[\"PATH\"].split(\":\")\n",
-        "nvc_path=\"/work/opt/local/x86_64/cores/nvidia/23.3/Linux_x86_64/23.3/compilers/bin\"\n",
-        "if nvc_path not in paths:\n",
-        "    os.environ[\"PATH\"] = \":\".join([nvc_path] + paths)"
+        "nvc_path = \"/work/opt/local/x86_64/cores/nvidia/23.3/Linux_x86_64/23.3/compilers/bin\"\n",
+        "fj_path = \"/opt/FJSVxtclanga/tcsds-1.2.41/bin\"\n",
+        "for path in [nvc_path, fj_path]:\n",
+        "    if path not in paths:\n",
+        "        paths = \":\".join([path] + paths)\n",
+        "os.environ[\"PATH\"] = paths"
       ],
       "execution_count": null,
       "outputs": []
