--- a/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
+++ b/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
@@ -783,7 +783,8 @@
       },
       "source": [
         "\n",
-        "* 以下はOdyssey用の推奨値\n",
+        "* Odysseyに投げるときは `%%bash_submit` の変わりに `%%bash_submit_o` を使う\n",
+        "* 以下がデフォルト値 (つまりなくても同じ)\n",
         ""
       ]
     },
@@ -801,7 +802,7 @@
         }
       },
       "source": [
-        "%%bash_submit\n",
+        "%%bash_submit_o\n",
         "#PJM -L rscgrp=lecture-o\n",
         "#PJM -L elapse=0:01:00\n",
         "#PJM -L node=1\n",
