--- a/01jupyter/notebooks/source/cs03/cs03_omp_integral.py.ipynb
+++ b/01jupyter/notebooks/source/cs03/cs03_omp_integral.py.ipynb
@@ -41,15 +41,21 @@
         "\n",
         "## 1-1. コンパイラ",
         "\n",
-        "* この演習環境では, 同じコンパイラでCPUもGPUもサポートしているという理由で, NVIDIA HPC SDKを使う\n",
-        "* コマンド名:\n",
-        "  * C: `nvc`\n",
-        "  * C++: `nvc++`\n",
-        "* コンパイルオプション:\n",
-        "  * `-mp=multicore` をつけると CPU用のOpenMPがサポートされる\n",
-        "  * `-mp=gpu` をつけると GPU用のOpenMPがサポートされる (次週)\n",
+        "* Aquariusでは, 同じコンパイラでCPUもGPUもサポートしているという理由で, NVIDIA HPC SDKを使う\n",
+        "  * コマンド名:\n",
+        "    * C: `nvc`\n",
+        "    * C++: `nvc++`\n",
+        "  * コンパイルオプション:\n",
+        "    * `-mp=multicore` をつけると CPU用のOpenMPがサポートされる\n",
+        "    * `-mp=gpu` をつけると GPU用のOpenMPがサポートされる\n",
+        "* Odysseyでは, 富士通コンパイラを使う\n",
+        "  * コマンド名:\n",
+        "    * C: `fccpx`\n",
+        "    * C++: `FCCpx`\n",
+        "  * コンパイルオプション:\n",
+        "    * `-Kopenmp` をつけると CPU用のOpenMPがサポートされる\n",
         "* 上記のコマンドを実行できるようにするために, 以下を実行する\n",
-        "  * なお以下はコマンドライン端末上では `module load nvidia` とするのが本来のやり方だがJupyter上で`module`コマンドが動かないのでやむなく以下のようにする"
+        "  * なお以下はコマンドライン端末上では `module load nvidia`, `module load fj` とするのが本来のやり方だがJupyter上で`module`コマンドが動かないのでやむなく以下のようにする"
       ]
     },
     {
@@ -68,9 +74,12 @@
       "source": [
         "import os\n",
         "paths = os.environ[\"PATH\"].split(\":\")\n",
-        "nvc_path=\"/work/opt/local/x86_64/cores/nvidia/23.3/Linux_x86_64/23.3/compilers/bin\"\n",
-        "if nvc_path not in paths:\n",
-        "    os.environ[\"PATH\"] = \":\".join([nvc_path] + paths)"
+        "nvc_path = \"/work/opt/local/x86_64/cores/nvidia/23.3/Linux_x86_64/23.3/compilers/bin\"\n",
+        "fj_path = \"/opt/FJSVxtclanga/tcsds-1.2.41/bin\"\n",
+        "for path in [nvc_path, fj_path]:\n",
+        "    if path not in paths:\n",
+        "        paths = [path] + paths\n",
+        "os.environ[\"PATH\"] = \":\".join(paths)"
       ],
       "execution_count": null,
       "outputs": []
@@ -89,6 +98,44 @@
         }
       },
       "source": [
+        "* 以下でコンパイラのパス名が fccpx is ..., nvc is ..., のように無事表示されれば成功"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-005",
+          "locked": false,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "%%bash\n",
+        "which nvc\n",
+        "which fccpx"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-006",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
         "\n",
         "## 1-2. ジョブ投入を簡便に行うスクリプト",
         ""
@@ -100,7 +147,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-005",
+          "grade_id": "c-007",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -123,7 +170,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-006",
+          "grade_id": "c-008",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -145,7 +192,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-007",
+          "grade_id": "c-009",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -216,7 +263,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-008",
+          "grade_id": "c-010",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -236,7 +283,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-009",
+          "grade_id": "c-011",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -258,7 +305,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-010",
+          "grade_id": "c-012",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -278,7 +325,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-011",
+          "grade_id": "c-013",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -299,7 +346,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-012",
+          "grade_id": "c-014",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -370,7 +417,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-013",
+          "grade_id": "c-015",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -390,7 +437,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-014",
+          "grade_id": "c-016",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -407,7 +454,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-015",
+          "grade_id": "c-017",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -427,7 +474,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-016",
+          "grade_id": "c-018",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -444,7 +491,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-017",
+          "grade_id": "c-019",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -470,7 +517,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-018",
+          "grade_id": "c-020",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -487,7 +534,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-019",
+          "grade_id": "c-021",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -609,7 +656,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-020",
+          "grade_id": "c-022",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -630,7 +677,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-021",
+          "grade_id": "c-023",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -701,7 +748,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-022",
+          "grade_id": "c-024",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -721,7 +768,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-023",
+          "grade_id": "c-025",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -741,7 +788,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-024",
+          "grade_id": "c-026",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -761,7 +808,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-025",
+          "grade_id": "c-027",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -778,7 +825,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-026",
+          "grade_id": "c-028",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -801,7 +848,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-027",
+          "grade_id": "c-029",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -818,7 +865,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-028",
+          "grade_id": "c-030",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -841,7 +888,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-029",
+          "grade_id": "c-031",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -859,7 +906,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-030",
+          "grade_id": "c-032",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -879,7 +926,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-031",
+          "grade_id": "c-033",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -896,7 +943,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-032",
+          "grade_id": "c-034",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -920,7 +967,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-033",
+          "grade_id": "c-035",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -937,7 +984,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-034",
+          "grade_id": "c-036",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -960,7 +1007,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-035",
+          "grade_id": "c-037",
           "locked": true,
           "schema_version": 3,
           "solution": false,
