--- a/01jupyter/notebooks/source/cs04/cs04_simd.py.ipynb
+++ b/01jupyter/notebooks/source/cs04/cs04_simd.py.ipynb
@@ -41,15 +41,21 @@
         "\n",
         "## 1-1. コンパイラ",
         "\n",
-        "* この演習環境では, 同じコンパイラでCPUもGPUもサポートしているという理由で, NVIDIA HPC SDKを使う\n",
-        "* コマンド名:\n",
-        "  * C: `nvc`\n",
-        "  * C++: `nvc++`\n",
-        "* コンパイルオプション:\n",
-        "  * `-mp=multicore` をつけると CPU用のOpenMPがサポートされる\n",
-        "  * `-mp=gpu` をつけると GPU用のOpenMPがサポートされる (次週)\n",
+        "* Aquariusでは, 同じコンパイラでCPUもGPUもサポートしているという理由で, NVIDIA HPC SDKを使う\n",
+        "  * コマンド名:\n",
+        "    * C: `nvc`\n",
+        "    * C++: `nvc++`\n",
+        "  * コンパイルオプション:\n",
+        "    * `-mp=multicore` をつけると CPU用のOpenMPがサポートされる\n",
+        "    * `-mp=gpu` をつけると GPU用のOpenMPがサポートされる\n",
+        "* Odysseyでは, 富士通コンパイラを使う\n",
+        "  * コマンド名:\n",
+        "    * C: `fccpx`\n",
+        "    * C++: `FCCpx`\n",
+        "  * コンパイルオプション:\n",
+        "    * `-Kopenmp` をつけると CPU用のOpenMPがサポートされる\n",
         "* 上記のコマンドを実行できるようにするために, 以下を実行する\n",
-        "  * なお以下はコマンドライン端末上では `module load nvidia` とするのが本来のやり方だがJupyter上で`module`コマンドが動かないのでやむなく以下のようにする"
+        "  * なお以下はコマンドライン端末上では `module load nvidia`, `module load fj` とするのが本来のやり方だがJupyter上で`module`コマンドが動かないのでやむなく以下のようにする"
       ]
     },
     {
@@ -68,9 +74,12 @@
       "source": [
         "import os\n",
         "paths = os.environ[\"PATH\"].split(\":\")\n",
-        "nvc_path=\"/work/opt/local/x86_64/cores/nvidia/23.3/Linux_x86_64/23.3/compilers/bin\"\n",
-        "if nvc_path not in paths:\n",
-        "    os.environ[\"PATH\"] = \":\".join([nvc_path] + paths)"
+        "nvc_path = \"/work/opt/local/x86_64/cores/nvidia/23.3/Linux_x86_64/23.3/compilers/bin\"\n",
+        "fj_path = \"/opt/FJSVxtclanga/tcsds-1.2.41/bin\"\n",
+        "for path in [nvc_path, fj_path]:\n",
+        "    if path not in paths:\n",
+        "        paths = [path] + paths\n",
+        "os.environ[\"PATH\"] = \":\".join(paths)"
       ],
       "execution_count": null,
       "outputs": []
