--- a/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
+++ b/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
@@ -818,6 +818,101 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-037",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "\n",
+        "# 5. AIチューター",
+        "\n",
+        "## 5-1. 設定",
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-038",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "import sys\n",
+        "ta_paths = [\"/work/gt47/share/taura/ai-tutor-hey\",\n",
+        "            \"/work/gt47/share/taura/ai-tutor-hey/ex\"]\n",
+        "for path in ta_paths:\n",
+        "  if path not in sys.path:\n",
+        "    sys.path.append(path)\n",
+        "from heytutor import hey, I, C, R, D, config\n",
+        "import openmp_tutor"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-039",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "\n",
+        "## 5-2. 質問例",
+        "\n",
+        "* hey(\"omp parallelの文法を教えて\") ... 自由な質問\n",
+        "* I(\"reduction句\") ... あるトピックについて説明\n",
+        "* C(\"omp for\") ... あるトピックに関するコーディング問題を出題\n",
+        "* R(\"omp for\") ... あるトピックに関するリーディング問題を出題\n",
+        "\n",
+        "以下のどれかのコメント # を外して実行してみよ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-040",
+          "locked": false,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "# hey(\"omp parallelの文法を教えて\")\n",
+        "# I(\"reduction句\")\n",
+        "# C(\"omp for\")\n",
+        "# R(\"omp for\")\n",
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
